[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
futures = "0.3"
serde_json = "1.0"
url = "2.0"
chess = { path = "../chess" }
rand = "0.8"

[lib]
name = "client"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
